manifest/deployment.yml
---
apiVersion: v1
kind: Service
metadata:
  name: kube-tollgate-svc
  namespace: kube-tollgate
  labels:
    app: kube-tollgate
spec:
  ports:
    - port: 2222
      name: http
  selector:
    app: kube-tollgate


---

apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kube-tollgate
  name: kube-tollgate-app
  labels:
    app: kube-tollgate
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kube-tollgate
      version: v1
  template:
    metadata:
      name: kube-tollgate
      labels:
        app: kube-tollgate
        version: v1
    spec:
      containers:
        - name: kube-tollgate
          image: jamesarems/kube-tollgate:latest
          ports:
          - containerPort: 2222
          volumeMounts:
          - name: config
            mountPath: /kube-tollgate/config
      volumes:
      - name: config
        configMap:
          name: kube-tollgate-config
