manifest/nginx-ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kube-tollgate-ing
  namespace: tollgate
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - YourHostname
  rules:
  #Add your hostname        
  - host: YourhostName
    http:
      paths:
      - path: /
        backend:
          serviceName: kube-tollgate-svc
          servicePort: 2222
